# command-line-rust

./: .gitignore  README.md
calr/: Cargo.toml
calr/src/: lib.rs
calr/tests/: cli.rs
calr/tests/expected/: 2-2020.txt  2020.txt  4-2020.txt  5-2020.txt
catr/: Cargo.toml
catr/src/: lib.rs
catr/tests/: cli.rs
catr/tests/expected/: all.b.out  all.n.out  all.out  error.out
commr/: Cargo.toml
commr/src/: lib.rs  main.rs
commr/tests/: cli.rs
cutr/: Cargo.toml
cutr/src/: lib.rs
cutr/tests/: cli.rs
echor/: Cargo.toml
echor/src/: main.rs
echor/tests/: cli.rs
echor/tests/expected/: error.txt
findr/: Cargo.toml  cp-tests.sh
findr/src/: lib.rs
findr/tests/: cli.rs
fortuner/: Cargo.toml
fortuner/src/: lib.rs  main.rs
fortuner/tests/: cli.rs
grepr/: Cargo.toml
grepr/src/: lib.rs  main.rs
headr/: Cargo.toml
headr/src/: lib.rs  main.rs
headr/tests/: cli.rs
headr/tests/expected/: all.c1.out  all.c2.out  all.c4.out  all.n2.out  all.n4.out  all.out
lsr/: Cargo.toml
lsr/src/: lib.rs  main.rs
lsr/tests/: cli.rs
shared-utils/: Cargo.toml
shared-utils/src/: lib.rs
tailr/: Cargo.toml
tailr/src/: lib.rs  main.rs
tailr/tests/: cli.rs
uniqr/: Cargo.toml
uniqr/src/: lib.rs  main.rs
uniqr/tests/: cli.rs
wcr/: Cargo.toml
wcr/src/: lib.rs  main.rs
wcr/tests/: cli.rs  unit.rs
wcr/tests/expected/: all.c.out  all.cl.out  all.l.out  all.lwm.out  all.m.out  all.ml.out  all.out  all.w.out  all.wc.out  all.wl.out  all.wm.out  atlamal.txt.c.out  atlamal.txt.cl.out  atlamal.txt.l.out  atlamal.txt.lwm.out  atlamal.txt.m.out  atlamal.txt.ml.out  atlamal.txt.out  atlamal.txt.w.out  atlamal.txt.wc.out  atlamal.txt.wl.out  atlamal.txt.wm.out  empty.txt.cl.out  empty.txt.l.out  empty.txt.lwm.out  fox.txt.c.out  fox.txt.cl.out  fox.txt.l.out  fox.txt.lwm.out  fox.txt.w.out  fox.txt.wl.out  fox.txt.wm.out
