[package]
authors = ["Miroslav Bogatyrev"]
name = "catr"
version = "0.1.0"
edition = "2021"
description = "A Rust implementation of Unix `cat` command"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4", features = ["derive"] }

[dev-dependencies]
assert_cmd = "2"
predicates = "2"
rand = "0"
path_macro = "1"