[package]
authors = ["Miroslav Bogatyrev"]
name = "findr"
version = "0.1.0"
edition = "2021"
description = "A Rust implementation of Unix `find` command"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4", features = ["derive"] }
shared-utils = { path = "../shared-utils" }
walkdir = "2"
regex = "1"

[dev-dependencies]
assert_cmd = "2"
predicates = "2"
rand = "0"