[package]
name = "lsr"
version = "0.1.0"
edition = "2021"
description = "A Rust implementation of Unix `ls` command"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4", features = ["derive"] }
chrono = "0.4"
tabular = "0.2.0"
users = "0.11"
shared-utils = { path = "../shared-utils" }

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
rand = "0"
sys-info = "0.9"